Fixing lenis scroll on Mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,10 @@ body {
     color: var(--foreground);
     background: var(--background);
 }
+html,
+body {
+    overflow: auto !important;
+}
 
 .Toastify .Toastify__toast-body {
     font-family: var(--font-bricolage) !important;
